--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
   }
 
   location /start {
-    proxy_pass http://meow-john:3000;
+    proxy_pass http://node-john:3000;
     proxy_redirect    default;
     proxy_set_header  Host $host;
     proxy_set_header  X-Real-IP $remote_addr;
@@ -21,7 +21,7 @@ server {
   }
 
   location /stop {
-    proxy_pass http://meow-john:3000;
+    proxy_pass http://node-john:3000;
     proxy_redirect    default;
     proxy_set_header  Host $host;
     proxy_set_header  X-Real-IP $remote_addr;
@@ -30,7 +30,7 @@ server {
   }
 
   location /ping {
-    proxy_pass http://meow-john:3000;
+    proxy_pass http://node-john:3000;
     proxy_redirect    default;
     proxy_set_header  Host $host;
     proxy_set_header  X-Real-IP $remote_addr;
