--- a/services/node/package.json
+++ b/services/node/package.json
@@ -4,13 +4,14 @@
     "test": "./node_modules/mocha/bin/_mocha 'tests/**/*.test.js'"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "debug": "^2.6.6",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
